# Charlie3D

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  vcpkg.json
.github/workflows/: gcc10-linux.yml
Charlie/: CMakeLists.txt  gui.cpp  gui.hpp  main.cpp
Charlie/asset/: CMakeLists.txt  cpu_image.cpp  cpu_mesh.hpp  cpu_scene.hpp  gltf_loader.cpp  gltf_loader.hpp  obj_loader.cpp
Charlie/asset_handling/: cpu_image.hpp  cpu_mesh.hpp  cpu_scene.hpp  gltf_loader.cpp  gltf_loader.hpp  obj_loader.cpp  obj_loader.hpp
Charlie/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  deletion_queue.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  imgui_render_pass.cpp  mesh.cpp  mesh.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_pass.hpp  renderer.cpp  renderer.hpp  sampler_cache.cpp  sampler_cache.hpp  scene.cpp  scene.hpp  shadow_map_renderer.cpp  shadow_map_renderer.hpp  textures.cpp  textures.hpp  uploader.cpp  uploader.hpp
Charlie/shader_compiler/: CMakeLists.txt  shader_compiler.cpp  shader_compiler.hpp
Charlie/utils/: CMakeLists.txt  asset_path.cpp  asset_path.hpp  background_tasks.cpp  background_tasks.hpp  configuration.hpp  file.hpp  file_watcher.hpp  file_watcher_impl_linux.cpp  file_watcher_impl_win32.cpp  prelude.hpp  string_map.hpp  task.hpp  thread_pool.cpp
Charlie/vulkan_helpers/: CMakeLists.txt  bda.cpp  bda.hpp  blending.hpp  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  compute_pipeline.cpp  compute_pipeline.hpp  context.cpp  context.hpp  debug_utils.cpp  debug_utils.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_utils.cpp  descriptor_utils.hpp  error_handling.cpp  error_handling.hpp  graphics_pipeline.hpp  header_only_impl.cpp  image.hpp  image_view.cpp  image_view.hpp  initializers.cpp  initializers.hpp  pipeline_barrier.cpp  pipeline_barrier.hpp  required_field.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp
Charlie/window/: CMakeLists.txt  input_handler.cpp  input_handler.hpp  resolution.hpp  window.cpp  window.hpp
assets/shaders/: camera.h.glsl  draw_data.h.glsl  fullscreen_tri.vert.glsl  generate_draws.comp.glsl  mesh.frag.glsl  mesh.frag.spv  mesh.vert.glsl  mesh.vert.spv  object_data.h.glsl  octahedron_encoding.h.glsl  pbr.h.glsl  prelude.h.glsl  scene_data.h.glsl  shadow.h.glsl  shadow.vert.glsl  tonemapping.frag.glsl
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  compiler.cmake
src/: CMakeLists.txt  main.cpp
src/asset/: CMakeLists.txt  cpu_image.cpp  cpu_image.hpp  cpu_mesh.hpp  cpu_scene.hpp  gltf_loader.cpp  header_only_libs_impl.cpp  obj_loader.cpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  imgui_render_pass.cpp  imgui_render_pass.hpp  mesh.cpp  mesh.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_pass.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  uploader.cpp  uploader.hpp
src/renderer/shader_compiler/: CMakeLists.txt  shader_compiler.cpp  shader_compiler.hpp
src/renderer/shaders/: mesh.frag.glsl  mesh.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/renderer/vulkan_helpers/: CMakeLists.txt  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  context.cpp  context.hpp  debug_utils.cpp  debug_utils.hpp  deletion_queue.hpp  descriptor_allocator.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_utils.cpp  descriptor_utils.hpp  error_handling.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  required_field.hpp  shader_module.cpp  shader_module.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  unique_resource.hpp  vma_impl.cpp
src/utils/: CMakeLists.txt  configuration.hpp  file.hpp  file_watcher_impl_win32.cpp  framerate_counter.cpp  framerate_counter.hpp  prelude.hpp  task.hpp  thread_pool.cpp  thread_pool.hpp
src/window/: CMakeLists.txt  input_handler.hpp  resolution.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
test/: CMakeLists.txt  configurations_test.cpp  file_watcher_test.cpp  hash.cpp  thread_pool_test.cpp
